Go back to producing output as ISO-8859-1 when possible, for compatibility.  b=355358  r+sr=bzbarsky